integrations/salesforce/mdapi/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Test Drive Booking</label>
        <type>Lookup</type>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Leads</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The completed test drive booking that generated this sales lead.</description>
    </fields>
    <fields>
        <fullName>Vehicle_Interest__c</fullName>
        <label>Vehicle Interest</label>
        <type>Lookup</type>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>Leads</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Portal_Contact_Id__c</fullName>
        <label>Portal Contact Id</label>
        <type>Text</type>
        <length>18</length>
        <description>Salesforce Contact Id of the already-registered customer this Lead was generated for, so conversion can be matched to the existing Contact instead of creating a duplicate.</description>
    </fields>
    <fields>
        <fullName>Source_Channel__c</fullName>
        <label>Source Channel</label>
        <type>Text</type>
        <length>60</length>
        <defaultValue>&quot;Test Drive Platform&quot;</defaultValue>
    </fields>
</CustomObject>